[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde", "clock"] }
nalgebra = "0.33.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
